# Loan

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/source-command-governance-check/: SKILL.md
.agents/skills/source-command-new-feature/: SKILL.md
.agents/skills/source-command-run-evals/: SKILL.md
.agents/skills/source-command-stress-run/: SKILL.md
.agents/skills/source-command-tape-validate/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: governance-check.md  new-feature.md  run-evals.md  stress-run.md  tape-validate.md
.claude/skills/: add-anomaly-detector.md  add-sicr-trigger.md  add-stress-scenario.md  add-validation-rule.md  generate-tape.md  verify-before-claim.md  write-test-first.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: shared.py  streamlit_app.py
app/pages/: 1_Quick_Scan.py
data/reference/: README.md  hra_rates.csv  nhg_caps.csv  nibud_lti.csv
data/samples/: synthetic_tape_v1.parquet
docs/: architecture.md  build-narrative.md  domain-primer.md  eu-ai-act-position.md  regulation-map.md  scope-boundary.md
docs/appendix/: anacredit-mapping.md
docs/governance/: change-management.md  decisions.md  fail-gracefully.md  model-inventory.md  raci.md  three-lines-of-defense.md
docs/plans/: 2026-06-08-project-scope-presentation.md
evals/: runner.py
evals/rubrics/: sicr_triggers.md  stress_scenario.md  validation_report.md
src/loan_tape/: __init__.py  generator.py  schema.py
src/loan_tape/analytics/: __init__.py  quick_scan.py
src/loan_tape/ecl/: __init__.py
src/loan_tape/io/: __init__.py  duckdb_store.py  loaders.py
src/loan_tape/validate/: __init__.py  anacredit.py  report.py  rules.py
tests/: conftest.py
tests/fixtures/: golden_tape.parquet
tests/integration/: test_validation_report.py
tests/unit/: test_generator.py  test_golden_tape.py  test_schema.py  test_smoke.py
tests/unit/analytics/: test_quick_scan.py
tests/unit/app/: test_shared.py
tests/unit/io/: test_duckdb_store.py  (+1 more)
(+6 files in other folders)
