[project]
name = "loan-tape"
version = "0.1.0"
description = "Dutch synthetic residential-mortgage loan-tape analytics platform — portfolio piece for AI-Assisted Builder role"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Dimos Gougousis" }]
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "streamlit>=1.36",
    "plotly>=5.22",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "faker>=25.0",
    "numpy>=1.26",
    "jinja2>=3.1",
    "typer>=0.12",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "detect-secrets>=1.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan_tape"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests on golden tape",
    "eval: evaluation rubric tests",
]

[tool.coverage.run]
source = ["src/loan_tape"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # simplify
    "RUF",            # ruff-specific
    "PL",             # pylint
    "TID",            # tidy imports
]
ignore = [
    "PLR0913",  # too many arguments — common in analytics functions
    "PLR2004",  # magic values — common in stress scenarios
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
"app/**" = ["E501"]
